--- a/Frontend/src/components/AccessSettings/AccessSettings.css
+++ b/Frontend/src/components/AccessSettings/AccessSettings.css
@@ -144,6 +144,7 @@
     border-bottom: 1px solid var(--border--color);
     vertical-align: middle;
     font-size: var(--font-size-table-text);
+    height: 58px;
     text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
