--- a/Frontend/src/components/Client/ClientModal/FinancesTab.css
+++ b/Frontend/src/components/Client/ClientModal/FinancesTab.css
@@ -1,34 +1,59 @@
 .finances-tab .two-cols{
-  display:flex;
-  gap:16px;
-  flex-wrap:wrap;
+
 }
-.finances-tab .switch{
-  position:relative;
-  display:inline-block;
-  width:46px;height:24px;
+
+
+.select-plus{
+  width: 100%;
+  max-width: 266px;
 }
-.finances-tab .switch input{display:none;}
-.finances-tab .slider{
-  position:absolute;
-  cursor:pointer;
-  top:0;left:0;right:0;bottom:0;
-  background:#ccc;
-  border-radius:24px;
-  transition:.2s;
+
+.custom-number-input {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--border-form-color); 
 }
-.finances-tab .slider:before{
-  position:absolute;
-  content:'';
-  height:18px;width:18px;
-  left:3px;bottom:3px;
-  background:#fff;
-  border-radius:50%;
-  transition:.2s;
+
+.num-btn {
+  background: transparent;
+  border: none;
+  color: #aeb8d3; 
+  font-size: 20px;
+  font-weight: bold;
+  cursor: pointer;
+  padding: 0 12px;
+  height: 38px; 
+  transition: background 0.2s;
 }
-.finances-tab .switch input:checked + .slider{
-  background:#27ae60;
+
+
+.num-btn:disabled {
+  color: #5a6688;
+  cursor: not-allowed;
 }
-.finances-tab .switch input:checked + .slider:before{
-  transform:translateX(22px);
+
+
+.custom-number-input input[type="number"] {
+  flex-grow: 1; 
+  border: none;
+}
+
+
+
+
+.custom-number-input input::-webkit-outer-spin-button,
+.custom-number-input input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+.custom-number-input input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+
+.custom-number-input input:focus,
+.num-btn:focus {
+  outline: none;
 }
