--- a/Frontend/src/styles/ClientModal.css
+++ b/Frontend/src/styles/ClientModal.css
@@ -20,8 +20,7 @@
   flex-direction: row;
   background: var(--bg-color);
   color: var(--text-color);
-  overflow: hidden;
-  font-family: inherit;
+
 }
 
 .client-modal.tri-layout.closing {
@@ -71,7 +70,7 @@
     padding: 10px 12px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     width: 100%; 
-    max-width: 200px;
+    max-width: 266px;
     box-sizing: border-box;
 }
 
@@ -88,7 +87,7 @@
     outline: none;
     color: var(--container-text-color);
     padding: 8px;
-    max-width: 200px;
+    max-width: 266px;
     width: 100%;
     height: 38px;
     resize: vertical;
@@ -115,7 +114,7 @@
   display: flex;
   justify-content: flex-end;
   gap: 8px;
-  margin-top: 24px;
+  background-color: #19213A;
 }
 
 
