--- a/Frontend/src/styles/EmployeeModal.css
+++ b/Frontend/src/styles/EmployeeModal.css
@@ -68,7 +68,15 @@
 }
 
 
-.chat-placeholder,
+.chat-placeholder{
+  background-color: #141b2e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  height: 100%;
+}
 .actions-placeholder {
   display: flex;
   justify-content: center;
@@ -120,7 +128,7 @@
     padding: 10px 12px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.3);
     width: 100%; 
-    max-width: 200px;
+    max-width: 266px;
     box-sizing: border-box;
 }
 
@@ -137,7 +145,7 @@
     outline: none;
     color: var(--container-text-color);
     padding: 8px;
-    max-width: 200px;
+    max-width: 266px;
     width: 100%;
     height: 38px;
     resize: vertical;
