--- a/Frontend/src/styles/EmployeesPage.css
+++ b/Frontend/src/styles/EmployeesPage.css
@@ -239,9 +239,7 @@
 .employees-card-view {
     width: 100%;
 }
-.card-group {
-    margin-bottom: 20px;
-}
+
 .card-group-header {
   cursor: pointer;
   padding: 10px 16px;
@@ -251,7 +249,6 @@
   color: #a0a0a0;
   border: 1px solid var(--border--color);
   border-radius: 8px;
-  margin: 12px 10px 0;
 }
 .cards-container {
     margin-top: 10px;
@@ -264,9 +261,6 @@
 .employees-card-view {
     width: 100%;
 }
-.card-group {
-    margin-bottom: 20px;
-}
 .card-group-header {
     cursor: pointer;
     padding: 10px;
@@ -276,7 +270,7 @@
     color: #a0a0a0;
 }
 .cards-container {
-    margin-top: 10px;
+    margin-top: 0;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
     gap: 16px; 
