--- a/Frontend/src/styles/ViewEditTransactionModal.css
+++ b/Frontend/src/styles/ViewEditTransactionModal.css
@@ -326,7 +326,7 @@
   gap: 10px;
   margin-top: auto;
   margin-right: 24px;
-  padding: 30px 20px;
+  padding: 10px 20px 30px 20px;
   border-top: 1px solid var(--border-form-color);
   flex-shrink: 0;
 }
